@@ -1,3 +1,6 @@
+- Always use separate session bus for greeter sessions
+  This runs dbus-run-session, so the binary needs to be available
+
 ==============
 Version 3.34.1
 ==============
